# drims2_motion_control

./: .gitignore  README.md  dependencies.repos
docs/: __readme_include.html  drims2_motion_server.motion_server.html  genindex.html  py-modindex.html  search.html  searchindex.js  standards.html
docs/_sources/: drims2_motion_server.drims2_utils.rst.txt  drims2_motion_server.motion_server.rst.txt  drims2_motion_server.rst.txt  index.rst.txt
docs/_sources/standard_docs/: LICENSE.rst.txt
docs/_sources/standard_docs/original/: README.md.txt
docs/drims2_motion_server/: ..nojekyll.swp  .buildinfo  drims2_motion_server.drims2_utils.html  drims2_motion_server.html  drims2_motion_server.motion_client.html  index.html  modules.html  objects.inv
docs/drims2_motion_server/.doctrees/: __readme_include.doctree  drims2_motion_server.doctree  drims2_motion_server.drims2_utils.doctree  drims2_motion_server.motion_client.doctree  drims2_motion_server.motion_server.doctree  environment.pickle  index.doctree  modules.doctree  standards.doctree
docs/drims2_motion_server/.doctrees/standard_docs/: LICENSE.doctree  PACKAGE.doctree  README.doctree
docs/drims2_motion_server/.doctrees/standard_docs/original/: README.doctree
docs/drims2_motion_server/_sources/: drims2_motion_server.motion_client.rst.txt  modules.rst.txt
docs/drims2_motion_server/standard_docs/: PACKAGE.html  README.html
docs/drims2_motion_server/standard_docs/original/: README.html
docs/standard_docs/: LICENSE.html
drims2_behavior_tree/: CMakeLists.txt  README.md  package.xml
drims2_behavior_tree/config/: behavior_tree_config.yaml
drims2_behavior_tree/include/drims2_behavior_tree/leaves/: attach_object.hpp  check_dice_face.hpp  detach_object.hpp  dice_identification.hpp  gripper_command.hpp  move_to_cartesian.hpp  move_to_joint.hpp  move_to_pose.hpp
drims2_behavior_tree/launch/: bringup.launch.py
drims2_behavior_tree/src/: bt_executer_node.cpp
drims2_behavior_tree/src/leaves/: attach_object.cpp  check_dice_face.cpp  detach_object.cpp  dice_identification.cpp  gripper_command.cpp  move_to_cartesian.cpp  move_to_joint.cpp  move_to_pose.cpp
drims2_behavior_tree/trees/: example.xml  ur5e_2fg7_example.xml
drims2_motion_server/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
drims2_motion_server/config/: motion_server_config.yaml  moveit_config.yaml
drims2_motion_server/drims2_motion_server/: drims2_utils.py  motion_client.py  motion_server.py  motion_server_test.py
drims2_motion_server/examples/: fake_dice_identification_server.py  integration_test.py  motion_client_test.py  test_onrobot_gripper.py
drims2_motion_server/launch/: motion_server.launch.py
drims2_move_to/: CMakeLists.txt  package.xml
drims2_move_to/include/drims2_move_to/: drims2_move_to.hpp
drims2_move_to/src/: drims2_move_to.cpp
drims2_move_to/src/bindings/: move_to_bindings.cpp
drims2_msgs/: CMakeLists.txt  package.xml
drims2_msgs/action/: MoveToCartesian.action  MoveToJoint.action  MoveToPose.action
drims2_msgs/srv/: AttachObject.srv  DetachObject.srv  DiceIdentification.srv
